feat: Optimize build, rendering, and styling
Enhances the build process by copying necessary project files to the public directory. Improves Recharts rendering by ensuring charts are visible and fixing potential height jitter. Updates styling for summary cards and adjusts `vercel.json` for cleaner URLs and trailing slash handling.

--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
         .recharts-responsive-container {
             min-height: 300px !important;
         }
+        .recharts-wrapper {
+            overflow: visible !important;
+        }
         /* Custom scrollbar for better aesthetics */
         ::-webkit-scrollbar {
             width: 6px;
@@ -44,5 +47,6 @@
 </head>
 <body class="bg-slate-50 text-slate-900 transition-colors duration-200">
     <div id="root"></div>
+    <script type="module" src="./index.tsx"></script>
 </body>
 </html>
